--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,22 @@ services:
     environment:
       - DEBUG=1
       - SECRET_KEY=nb-w)*@-3kerumb%^7!rdqqta&e__bj^u)%%2x16!xv7$b_jgc
+      - SQL_ENGINE=django.db.backends.postgresql
+      - SQL_DATABASE=hello_django_dev
+      - SQL_USER=hello_django
+      - SQL_PASSWORD=hello_django
+      - SQL_HOST=db
+      - SQL_PORT=5432
+      - DATABASE=postgres
+    depends_on:
+      - db
+  db:
+    image: postgres:11.5-alpine
+    volumes:
+      - postgres_data:/var/lib/postgresql/data/
+    environment:
+      - POSTGRES_USER=hello_django
+      - POSTGRES_PASSWORD=hello_django
+      - POSTGRES_DB=hello_django_dev
+volumes:
+  postgres_data:
