--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -8,11 +8,24 @@ WORKDIR /usr/src/app
 ENV PYTHONDONTWRITEBYTECODE 1 # python -B
 ENV PYTHONUNBUFFERED 1 # python -u
 
+# install psycopg2
+RUN apk update \
+    && apk add --virtual build-deps gcc python3-dev musl-dev \
+    && apk add postgresql-dev \
+    && pip install psycopg2 \
+    && apk del build-deps
+
 # install dependencies
 RUN pip install --upgrade pip
 RUN pip install pipenv
 COPY ./Pipfile /usr/src/app/Pipfile
 RUN pipenv install --skip-lock --system --dev
 
+# copy entrypoint.sh
+COPY ./entrypoint.sh /usr/src/app/entrypoint.sh
+
 # copy project
 COPY . /usr/src/app/
+
+# run entrypoint.sh
+ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
