--- a/app/Pipfile
+++ b/app/Pipfile
@@ -8,6 +8,9 @@ verify_ssl = true
 [packages]
 django = "==2.2.5"
 django-safedelete = "*"
+djangorestframework = "*"
+markdown = "*"
+django-filter = "*"
 
 [requires]
 python_version = "3.7"
