--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '3.7'
+version: "3.7"
 
 services:
   web:
@@ -10,7 +10,7 @@ services:
       - 8000:8000
     environment:
       - DEBUG=1
-      - SECRET_KEY=nb-w)*@-3kerumb%^7!rdqqta&e__bj^u)%%2x16!xv7$b_jgc
+      - SECRET_KEY=nb-w)*@-3kerumb%^7!rdqqta&e__bj^u)%%2x16!xv7b_jgc
       - SQL_ENGINE=django.db.backends.postgresql
       - SQL_DATABASE=hello_django_dev
       - SQL_USER=hello_django
@@ -28,5 +28,6 @@ services:
       - POSTGRES_USER=hello_django
       - POSTGRES_PASSWORD=hello_django
       - POSTGRES_DB=hello_django_dev
+      - DJANGO_SETTINGS_MODULE=hello_django.settings
 volumes:
   postgres_data:
